chore: add build scripts and update documentation